--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
     <div class="search-list">
         <div class="search-title">Search Results</div>
         <div class="search-tile">
-            <app-searchtile></app-searchtile>
+            <app-searchtile [users]="results"></app-searchtile>
         </div>
     </div>
 
