--- a/src/app/history/history.component.css
+++ b/src/app/history/history.component.css
@@ -5,6 +5,7 @@
         width: 100%;
         height: 100vh;
         background-color: #dde6ef;
+        overflow-y:auto;
     }
 
     .history-title {
@@ -51,7 +52,6 @@
         padding: 5px 8px 7px 9px;
         border-radius: 5px;
         margin-top: 5px;
-        height: 100%;
 
         .section1 {
             width: 30%;
@@ -63,11 +63,20 @@
             /* margin-left: 25%; */
 
             .sub-sec1 {
-                height: 89%;
+                height: 70%;
                 width: 128%;
 
             }
         }
+    }
+    .empty-history-main {
+        display: flex;
+        flex-direction: row;
+        background-color: whitesmoke;
+        padding: 5px 8px 7px 9px;
+        border-radius: 5px;
+        margin-top: 5px;
+        height: 100%;
     }
 
     .btn-primary {
